[package]
name = "libmonolith"
description = "A wrapper to use the monolith crate as a library"
repository = "https://github.com/infinixius/libmonolith"
license = "MIT"
version = "0.3.0"
edition = "2021"

[dependencies]
encoding_rs = "0.8.35"
markup5ever_rcdom = "0.3.0"
monolith = "2.8.3"
reqwest = { version = "0.12.12", default-features = true, features = ["default-tls", "blocking", "gzip", "brotli", "deflate"] }
url = "2.5.4"
